--- a/index.html
+++ b/index.html
@@ -17,29 +17,29 @@
         <main>
             <h1>Професіонали радять</h1>
             <section class="info">
-                <article>
+                <article class="margin">
                     <h2>Лептоп для відпочинку</h2>
                     <img src="/uploads/2021/02/notebook-405755_1920_0_1613586011.jpg" width="400px" height="300px"/>
-                    <p>Samsung V145-S</p>
+                    <p class="text">Samsung V145-S</p>
                     <a class="article-but" href="">Детальніше</a>
                 </article>
-                <article>
+                <article class="margin">
                     <h2>Як вибрати навушники</h2>
                     <img src="/uploads/2021/02/music-1813100_1280_0_1613586010.png" width="330px" height="300px"/>
-                    <p>Поговоримо про новинки</p>
-                    <a class="article-but" href="">Детальніше</a>
+                    <p class="text">Поговоримо про новинки</p>
+                    <a class="article-nope" href="">Детальніше</a>
                 </article>
-                <article>
+                <article class="margin">
                     <h2>Телефон мрії</h2>
                     <img src="/uploads/2021/02/mobile-phone-1875813_1920_0_1613586011.jpg" width="400px" height="300px"/>
-                    <p>Apple iphone 13</p>
-                    <a class="article-but" href="">Детальніше</a>
+                    <p class="text">Apple iphone 13</p>
+                    <a class="article-rar" href="">Детальніше</a>
                 </article>
-                <article>
+                <article class="margin">
                     <h2>Техніка для всього</h2>
                     <img src="/uploads/2021/02/laptop-1483974_1920_0_1613586010.jpg" width="400px" height="300px"/>
-                    <p>І цілого світу мало...</p>
-                    <a class="article-but" href="">Детальніше</a>
+                    <p class="text">І цілого світу мало...</p>
+                    <a class="article-sus" href="">Детальніше</a>
                 </article>
             </section>
             <img src="/uploads/2021/02/mobile-phone-1419275_1920_0_1613586010.jpg" width="960" height="270"/>
